refactor admin api